# CleanCodeCpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cpp.hint
CleanCode/: CMakeLists.txt  clean_code.cpp  complex_function.cpp  complex_function.h  names.cpp
DvdShop/: CMakeLists.txt  CustomerTest.cpp  DvdShopTest.cpp
DvdShopCompleted/: CMakeLists.txt  ChildrensMovie.cpp  ChildrensMovie.h  DvdShopTest.cpp
Employee/: CMakeLists.txt  Employee.cpp  Employee.h  Project.cpp  Project.h
FizzBuzz/: CMakeLists.txt  fizz_buzz.cpp  fizz_buzz_main.cpp  fizz_buzz_test.cpp
Point/: CMakeLists.txt  concrete_point.h
PrimeFactors/: CMakeLists.txt  prime_factors.cpp  prime_factors_test.cpp
PrimeFactorsCompleted/: CMakeLists.txt  prime_factors_test.cpp
Shape/: shape.h
Stack/: CMakeLists.txt  stack.cpp  stack.h  stack_main.cpp  stack_test.cpp
